--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p class="apresentacao__conteudo__texto">Olá! Sou Elvis Console Louro, candidato a aluno do Curso ONE-Oracle Next Education, para me tornar um densenvolvedor em T, com diversas especialidades. Para colocarmos em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
-                <a class="apresentacao__links__navegacao" href="https://github.com/rafaballerini">
+                <a class="apresentacao__links__navegacao" href="https://github.com/ElvisLouro">
                     <img src="./assets/github.png">
                     Github
                 </a>
