--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
             <p class="apresentacao__conteudo__texto">Olá! Sou Elvis Console Louro, candidato a aluno do Curso ONE-Oracle Next Education, para me tornar um densenvolvedor em T, com diversas especialidades. Para colocarmos em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
-                <a class="apresentacao__links__navegacao" href="https://github.com/ElvisLouro">
+                <a class="apresentacao__links__navegacao" href="https://github.com/ElvisLouro" target="_blank">
                     <img src="./assets/github.png">
                     Github
                 </a>
-                <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/rafaellaballerini">
+                <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/elvislouro/" target="_blank">
                     <img src="./assets/linkedin.png">
                     linkedin
                 </a>
-                <a class="apresentacao__links__navegacao" href="https://twitch.tv/guilimadev">
-                    <img src="./assets/twitch.png">
-                    Twitch
+                <a class="apresentacao__links__navegacao" href="https://twitter.com/elvislouro" target="_blankq">
+                    <img src="./assets/twitter.png">
+                    Twitter
                 </a>
-                <a class="apresentacao__links__navegacao" href="https://twitch.tv/guilimadev">
+                <a class="apresentacao__links__navegacao" href="https://wa.me/5521991332150/?text=No momento não posso atender, se preferir pode deixar seu recado que em breve lhe respondo!" target="_blank">
                     <img src="./assets/whatsapp.png">
                     Whatsapp
                 </a>
